[tool.poetry]
name = "pgrest"
description = "A Python client library for PostgREST APIs. "
version = "0.6.0"
authors = ["Anand Krishna <anandkrishna2312@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anand2312/pgrest"
repository = "https://github.com/anand2312/pgrest"
documentation = "https://anand2312.github.io/pgrest"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.15.0"
mkdocs-material = "^7.3.5"
mkdocstrings = "^0.16.2"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
