[tool.poetry]
name = "pgrest"
description = "A Python client library for PostgREST APIs. "
version = "0.7.0"
authors = ["Anand Krishna <anandkrishna2312@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anand2312/pgrest"
repository = "https://github.com/anand2312/pgrest"
documentation = "https://anand2312.github.io/pgrest"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.20.0"
multidict = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^2.12.1"
pre-commit = "^2.18.1"
mkdocs-material = "^8.2.12"
mkdocstrings = "^0.18.1"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
